--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-my-toasts": "^1.1.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
